<resources>
    <string name="app_name">PlaceFinder</string>
    <string name="title_activity_maps">Map</string>
    <string name="string_restaurant">Restaurants</string>
    <string name="string_pharmacy">Pharmacies</string>
    <string name="string_bank">Banks</string>
    <string name="string_libraries">Libraries</string>
    <string name="string_grocery">Grocery</string>
    <string name="string_convenience">Convenience Store</string>
    <string name="string_bar">Bar</string>
    <string name="string_laundry">Laundry</string>
    <string name="string_school">School</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
